samples/ingress/001-routing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipy-ok
  labels:
    app: pipy-ok
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pipy-ok
  template:
    metadata:
      labels:
        app: pipy-ok
    spec:
      containers:
        - name: pipy-ok
          image: flomesh/pipy:0.90.1-157
          ports:
            - name: pipy
              containerPort: 8080
          command:
            - pipy
            - -e
            - |
              pipy()
              .listen(8080)
              .serveHTTP(new Message(`Hi, there! POD: ${os.env.HOSTNAME}`))
---
apiVersion: v1
kind: Service
metadata:
  name: pipy-ok
spec:
  ports:
    - name: pipy
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: pipy-ok
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipy-ok
  annotations:
    pipy.ingress.kubernetes.io/session-sticky: "true"
spec:
  ingressClassName: pipy
  rules:
  - http:
      paths:
        - path: /ok
          pathType: Prefix
          backend:
            service:
              name: pipy-ok
              port:
                number: 8080
