samples/ingress/300-ingress-tls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipy-ok-tls
  labels:
    app: pipy-ok-tls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipy-ok-tls
  template:
    metadata:
      labels:
        app: pipy-ok-tls
    spec:
      containers:
        - name: pipy-ok-tls
          image: flomesh/pipy:0.90.1-10
          ports:
            - name: pipy
              containerPort: 8080
          command:
            - pipy
            - -e
            - |
              pipy()
              .listen(8080)
              .serveHTTP(new Message('Hi, there!'))
---
apiVersion: v1
kind: Service
metadata:
  name: pipy-ok-tls
spec:
  ports:
    - name: pipy
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: pipy-ok-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipy-ok-tls
spec:
  ingressClassName: pipy

  rules:
    - host: abc.com
      http:
        paths:
          - path: /ok
            pathType: Prefix
            backend:
              service:
                name: pipy-ok-tls
                port:
                  number: 8080
  tls:
  - hosts:
    - abc.com
    secretName: test-secret
